fix: missing z-index on blocknotice

--- a/assets/cookieconsent-custom.css
+++ b/assets/cookieconsent-custom.css
@@ -52,6 +52,7 @@
     display: inline-block;
     position: relative;
     overflow: hidden;
+    z-index: 10;
 }
 
 .cc-blocknotice-wrapper .cc-blocknotice {
